monitoring/logs/kustomize/overlays/aws/thanos-sepolia/resource_override.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: log-monitoring
spec:
  template:
    spec:
      containers:
        - name: kibana
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
